Latest build of target web.

--- a/section-title.html
+++ b/section-title.html
@@ -198,7 +198,9 @@ window.MathJax = {
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="section-title"><h2 class="heading hide-type">
 <span class="type">Section</span> <span class="codenumber">1.1</span> <span class="title">Section title</span>
 </h2>
-<div class="para" id="p-1">Hello</div></section></div>
+<div class="para" id="p-1">Hello</div>
+<figure class="figure figure-like" id="figure-sage-double-plot"><div class="image-box" style="width: 90%; margin-left: 5%; margin-right: 5%;"><img src="generated/sageplot/sageplot-updown.svg" role="img" class="contained"></div>
+<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">1.1.1<span class="period">.</span></span><span class="space"> </span>Two Sage plots on one set of axes, hi mom</figcaption></figure></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="chapter-title.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="backmatter.html" title="Next"><span class="name">Next</span><span class="icon">&gt;</span></a>
 </div></main>
